syntax = "proto3";

package sh.generated;

import "Shelter.proto";
import "Venue.proto";

service MapObjectService {
    rpc allObjects(MapObjectRequest) returns (MapObjectResponse) {}
}

message MapObjectRequest {
}

message VenueMapObject {
    Venue venue = 1;
}

message ShelterMapObject {
    Shelter shelter = 1;
    repeated ShelterOrder availableOrders = 2;
}

message MapObjectResponse {
    repeated ShelterMapObject shelters = 1;
    repeated VenueMapObject venues = 2;
}
